src/test/deca/context/invalid/homemade/assign_method.deca
// trying to assign value to method

class A {
    int x() { return 4; }
}

{
    A a = new A();
    a.x = 2;
}